tests/dataset/tpc-ds/compiler/kotlin/q92.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q92.kt:66:18: error: type mismatch: inferred type is Double but Boolean was expected
val result = if (toDouble(toDouble(sum_amt) > toDouble(avg_amt)) * toDouble(1.3)) sum_amt else 0.0
                 ^
